--- a/ms-movie/src/main/resources/application.yaml
+++ b/ms-movie/src/main/resources/application.yaml
@@ -1,5 +1,55 @@
 spring:
   application:
     name: ms-movie
+  profiles:
+    active: ${PROFILE:local}
+  datasource:
+    url: ${DB_URL}
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-test-query: SELECT 1
+      connection-timeout: 60000
+      initialization-fail-timeout: 2000
+      isolate-internal-queries: true
+      max-lifetime: 1800000
+      maximum-pool-size: ${MAX_DB_POOL_SIZE:50}
+      validation-timeout: 2000
+      leak-detection-threshold: 20000
   jpa:
+    database: POSTGRESQL
     open-in-view: false
+    generate-ddl: false
+
+server:
+  servlet:
+    contextPath: /ms-movie
+  error:
+    include-message: always
+    include-binding-errors: always
+  port: ${PORT:8080}
+
+
+management:
+  health:
+    defaults:
+      enabled: false
+    db:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "health,httptrace,info,liquibase"
+
+#PRecisa ler dnv sobre o actuator..
+#Precisa fazer o springodc funfar
+#Precisa testar o spring native
+#Dps precisa pegar a task pra configurar o ci e cd
+
+springdoc:
+  show-actuator: true
+  swagger-ui:
+    disable-swagger-default-url: true
+    config-url: /v3/api-docs/swagger-config
+    path: /v3/api-docs
