--- a/ms-movie/docker-compose.yaml
+++ b/ms-movie/docker-compose.yaml
@@ -5,8 +5,8 @@ services:
     container_name: ms-movie-database
     image: postgres
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: 123456
+      POSTGRES_USER: $DB_USER
+      POSTGRES_PASSWORD: $DB_PASSWORD
       POSTGRES_DB: ms-movie
     ports:
       - "5415:5432"
@@ -16,12 +16,49 @@ services:
       - database-volume:/var/lib/postgresql/data
     networks:
       - internal-network
-#    healthcheck:
-#      test: [ "CMD-SHELL", "pg_isready", "-d", "param_api" ]
-#      interval: 5s
-#      timeout: 10s
-#      retries: 2
-
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready", "-d", "ms-movie" ]
+      interval: 3s
+      timeout: 10s
+      retries: 2
+  ms-movie:
+    container_name: ms-movie-api
+    build:
+      context: ./
+      dockerfile: Dockerfile
+      args:
+        PROFILE: $PROFILE
+        PORT: $PORT
+    env_file:
+      - .env
+    image: ms-movie-image
+    labels:
+      org.springframework.boot.ignore: true
+    expose:
+      - $PORT
+    ports:
+      - "8085:$PORT"
+    networks:
+      - internal-network
+    depends_on:
+      database:
+        condition: service_healthy
+  ms-movie-native:
+    container_name: ms-movie-api-native
+    env_file:
+      - .env
+    image: ms-movie:0.0.1-SNAPSHOT
+    labels:
+      org.springframework.boot.ignore: true
+    expose:
+      - $PORT
+    ports:
+      - "8085:$PORT"
+    networks:
+      - internal-network
+    depends_on:
+      database:
+        condition: service_healthy
 volumes:
   database-volume:
     name: ms-movie-database-volume
