--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,6 +23,9 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./ms-movie
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 21
@@ -33,8 +36,8 @@ jobs:
     - name: Build ms-movie
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
-        arguments: build -p ms-movie/ -x test
+        arguments: build -x test
     - name: Run ms-movie unitary tests
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
-        arguments: -p ms-movie/ test
+        arguments: test
