--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,12 +10,12 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ "main", "develop" ]
-    paths:
-      - 'ms-movie/**'
+    # paths:
+    #   - 'ms-movie/**'
   pull_request:
     branches: [ "main", "develop", "feature/**", "bugfix/**", "hotfix/**"  ]
-    paths:
-      - 'ms-movie/**'
+    # paths:
+    #   - 'ms-movie/**'
 
 permissions:
   contents: read
