--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,7 +33,6 @@ jobs:
     - name: Build ms-movie
       working-directory: ./ms-movie
       run: ./gradlew build -x test
-    # - name: Run ms-movie unitary tests
-    #   uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-    #   with:
-    #     arguments: test
+    - name: Run ms-movie unitary tests
+      working-directory: ./ms-movie
+      run: ./gradlew test
