--- a/ms-movie/src/main/resources/application.yaml
+++ b/ms-movie/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
   profiles:
     active: ${PROFILE:local}
   liquibase:
-    enabled: false
+    enabled: true
   datasource:
     url: ${DB_URL}
     username: ${DB_USER}
