--- a/ms-movie/gradle.properties
+++ b/ms-movie/gradle.properties
@@ -2,6 +2,6 @@ org.gradle.caching = true
 org.gradle.configuration.cache = true
 org.gradle.parallel = true
 org.gradle.jvmargs=-Xmx4096M
-org.gradle.warning.mode=all
+org.gradle.warning.mode=summary
 #Only enable if you want to see why a test failed
 createReports=false
