:sparkles: (joy-04) Inserting game into database and making minor changes
Providing spring docker compose module to always stick docker in the air, creating auditable interface with new jdk sealed feature, dto with
record, and fixing some entity and dto deserialization/save bugs

--- a/ms-movie/src/main/resources/application.yaml
+++ b/ms-movie/src/main/resources/application.yaml
@@ -3,6 +3,9 @@ spring:
     name: ms-movie
   profiles:
     active: ${PROFILE:local}
+  docker:
+    compose:
+      lifecycle-management: start-only
   liquibase:
     enabled: ${LIQUIBASE_ENABLED:true}
     databaseChangeLogTable: liquibase_change_log
