:heavy_plus_sign: (joy-04) Adding and configuring logback

--- a/ms-movie/src/main/resources/application.yaml
+++ b/ms-movie/src/main/resources/application.yaml
@@ -28,6 +28,9 @@ spring:
     database: POSTGRESQL
     open-in-view: false
     generate-ddl: false
+  output:
+    ansi:
+      enabled: always
 
 server:
   servlet:
