:sparkles: (joy-18) Creating api-key filter

--- a/ms-game/src/main/resources/application.yaml
+++ b/ms-game/src/main/resources/application.yaml
@@ -53,6 +53,9 @@ management:
   endpoints:
     enabled-by-default: false
 
+api:
+  key: ${API_KEY}
+
 springdoc:
   show-actuator: true
   swagger-ui:
